JSdialog: Fix container's padding
Do not set sub container with a margin. This was resulting in
some elements (that are inside of that container) to be properly
contained but all the rest were being set without any surrounding
margins -> leading to misalignment

- Main jsdialog container shouldn't inherit lokdialog padding 0
- We do not need to specifically set `padding: .5em 1 em` because it
- has been already set and inherit from jquery ui CSS rules

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -21,10 +21,6 @@
 	z-index: 2001;
 }
 
-.lokdialog > .jsdialog.root-container:not(.autofilter) {
-	margin: .5em 1em; /*same as in .ui-dialog */
-}
-
 .jsdialog-container {
 	position: absolute;
 	z-index: 1105;
